# threatflux-unifi-sdk

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README_TEMPLATE.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  docker.yml  release.yml  security.yml
config/: unifi.example.yaml
docs/: README_STANDARDS.md  TEMPLATE_BOOTSTRAP_CHECKLIST.md
scripts/: check_template_placeholders.py
src/: client.rs  error.rs  lib.rs  main.rs  types.rs
src/config/: mod.rs  parser.rs  schema.rs
src/models/: backup.rs  client.rs  device.rs  dhcp.rs  dns.rs  firewall.rs  mod.rs  network.rs  port_forward.rs  routing.rs  site.rs  traffic.rs  vpn.rs
src/services/: backup.rs  clients.rs  devices.rs  dhcp.rs  dns.rs  firewall.rs  mod.rs  networks.rs  port_forward.rs  routing.rs  site.rs  traffic.rs  vpn.rs
src/sync/: mod.rs
tests/: integration_tests.rs
tests/integration/: config.rs  firewall.rs  network.rs  smoke.rs
