[package]
name = "rust-cicd-template"
version = "0.5.0"
edition = "2024"
rust-version = "1.94.0"
description = "ThreatFlux Rust CI/CD Template - Best practices for Rust projects"
license = "MIT"
repository = "https://github.com/ThreatFlux/rust-cicd-template"
homepage = "https://github.com/ThreatFlux/rust-cicd-template"
keywords = ["ci", "cd", "template", "github-actions"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "rust-cicd-template"
path = "src/main.rs"
