[package]
name = "threatflux-unifi-sdk"
version = "0.4.0"
edition = "2024"
rust-version = "1.94.0"
description = "UniFi SDK for UDM Pro and UniFi OS device automation"
license = "MIT"
repository = "https://github.com/ThreatFlux/threatflux-unifi-sdk"
homepage = "https://github.com/ThreatFlux/threatflux-unifi-sdk"
documentation = "https://docs.rs/threatflux-unifi-sdk"
readme = "README.md"
keywords = ["unifi", "udm", "network", "firewall", "automation"]
categories = ["api-bindings", "network-programming"]

[features]
default = ["full"]
full = ["firewall", "vpn", "traffic", "clients", "devices", "dhcp", "dns"]
firewall = []
vpn = []
traffic = []
clients = []
devices = []
dhcp = []
dns = []
integration-tests = []

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
futures = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "sync", "net", "process", "signal"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["serde", "v4", "v5"] }

[dev-dependencies]
httpmock = "0.8.2"
pretty_assertions = "1.4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "unifi-cli"
path = "src/bin/threatflux.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["integration-tests"]
